Deployment/e2e/applications/Ham/ham-shop.yaml
# Cookbooks Interceptor page
---
kind: Pod
apiVersion: v1
metadata:
  name: ham-webserver
  namespace: ham-shop
  labels:
    app: ham-webserver

spec:
  containers:
    - name: nginx
      image: nginx

      volumeMounts:
        - name: content
          mountPath: "/usr/share/nginx/html"
          readOnly: true
        - name: config-templates
          mountPath: "/etc/nginx/templates"
          readOnly: true

  volumes:
    - name: content
      configMap:
        name: ham-content
    - name: config-templates
      configMap:
        name: nginx-config-templates

---
kind: Service
apiVersion: v1
metadata:
  name: ham-webserver
  namespace: ham-shop

spec:
  selector:
    app: ham-webserver

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: ConfigMap
metadata:
  name: nginx-config-templates
  namespace: ham-shop
data:
  default.conf.template: |
    server {
      listen        80;
      server_name   shop.ham.test;
      location / {
        root   /usr/share/nginx/html;
        index  /index.html;
        add_header Cache-Control no-cache;
        try_files $uri $uri.html $uri/index.html;
      }
    }

---
apiVersion: v1
kind: ConfigMap
metadata:
  name: ham-content
  namespace: ham-shop
data:
  index.html: |
    <html>
    <head>
        <title>Ham Shop</title>
        <meta http-equiv="Pragma" content="no-cache"/>
        <meta http-equiv="Cache-Control" content="no-cache"/>
    </head>
    <body>
    <h1 class="headline">Hank and Ellie's shop</h1>
    <p>
        Hank and Ellie's infectious camaraderie sparked a brilliant idea: why not channel their unique chemistry into a
        web shop? Hank's knack for crafting punny product descriptions and Ellie's eye-catching designs brought their
        vision to life. From "Hank's Hilarious Ham T-shirts" to "Eggstraordinary Egg Art," the duo's offerings
        charmed the digital world. With social media wit and a dash of viral videos featuring their comedic exchanges,
        their web shop quickly gained a devoted following. Hank and Ellie's unconventional venture not only spread
        laughter but also brought their joyful partnership to screens worldwide, turning their corner of the internet
        into a hub of humor and creativity.
    </p>
    
    <footer>
        <a href="//id.ham.test/logout?post_logout_redirect_uri=//shop.ham.test">logout</a>
    </footer>
    </body>
    </html>

---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ham-webserver
  namespace: ham-shop
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: uitsmijter-forward-auth@kubernetescrd

spec:
  tls:
    - secretName: ham.test
  rules:
    - host: shop.ham.test
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: ham-webserver
                port:
                  number: 80
