Deployment/e2e/applications/Ham/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ham

---
apiVersion: v1
kind: Namespace
metadata:
  name: ham-shop
